--- a/LeaveTrackerWeb/Web.config
+++ b/LeaveTrackerWeb/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
     <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=NISARG-AVANI\SQLEXPRESS;Initial Catalog=LeaveTracker;uid=test;Password=test;Integrated Security=True" providerName="System.Data.SqlClient" />
+      <add name="DefaultConnection" connectionString="User ID=VAM_User;Password=VAM_User;Initial Catalog=EPIG_LeaveTracker;Data Source=01HW479348;Persist Security Info=True;Connect Timeout=1200" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=NISARG-AVANI\SQLEXPRESS;Initial Catalog=LeaveTracker;uid=test;Password=test;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
   <appSettings>
