--- a/LeaveTrackerWeb/Views/Web.config
+++ b/LeaveTrackerWeb/Views/Web.config
@@ -34,6 +34,8 @@
   </system.webServer>
 
   <system.web>
+    <customErrors mode="On">
+    </customErrors>
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
